[gd_scene load_steps=4 format=3 uid="uid://di4trv2r2r3d7"]

[ext_resource type="Script" path="res://Scenes/Managers/DevConsole/DevConsole.gd" id="1_m1l2j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rwdfm"]
emission_enabled = true
emission = Color(0, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_64w0g"]
material = SubResource("StandardMaterial3D_rwdfm")

[node name="DevConsole" type="CanvasLayer"]
layer = 127
visible = false
script = ExtResource("1_m1l2j")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DevConsolePanel" type="Panel" parent="Control"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/DevConsolePanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.400085
offset_bottom = -39.4
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextOutput" type="RichTextLabel" parent="Control/DevConsolePanel/Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Dev Console:"
scroll_following = true

[node name="InputLine" type="LineEdit" parent="Control/DevConsolePanel"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="TestDot" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_64w0g")

[connection signal="text_submitted" from="Control/DevConsolePanel/InputLine" to="." method="_on_input_line_text_submitted"]
